--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Image Masking</title>
+  <title>moving button</title>
   <style>
 
   * {
@@ -107,30 +107,6 @@
     margin-bottom: 10px;
   }
 
-  @media (max-width: 480px) {
-    h1 {
-      font-size: 22px;
-    }
-
-    .code-box {
-      font-size: 14px;
-      padding: 15px;
-    }
-
-    .css-tag {
-      padding: 4px 10px;
-      font-size: 12px;
-    }
-
-    .top-bar .user {
-      font-size: 14px;
-    }
-
-
-    .main-img {
-      width: 100%;
-      max-width: 100%;
-    }
 
     .code-container {
 
@@ -243,6 +219,36 @@ font-family: 'Fira Code', monospace;
     }
 
 
+
+
+
+
+  @media (max-width: 480px) {
+    h1 {
+      font-size: 22px;
+    }
+
+    .code-box {
+      font-size: 14px;
+      padding: 15px;
+    }
+
+    .css-tag {
+      padding: 4px 10px;
+      font-size: 12px;
+    }
+
+    .top-bar .user {
+      font-size: 14px;
+    }
+
+
+    .main-img {
+      width: 100%;
+      max-width: 100%;
+    }
+
+  
   }
 
 </style>
